[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprite/Cactus.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/Particles2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprite/Skull.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.5, 18.5 )

[node name="Area2D" type="Area2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
frames = SubResource( 4 )
frame = 3

[node name="cactus" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -4.5 )
shape = SubResource( 5 )

[node name="Particles2D" parent="." instance=ExtResource( 3 )]
lifetime = 1.0

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
